err/reliz.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/.libs_cffi_backend'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/aiodns'...
Listing './lib/python3.5/site-packages/aiodns-1.1.1.dist-info'...
Listing './lib/python3.5/site-packages/aiofilelock'...
Listing './lib/python3.5/site-packages/aiofilelock-1.0.0.dist-info'...
Listing './lib/python3.5/site-packages/aiohttp'...
Listing './lib/python3.5/site-packages/aiohttp-2.3.6.dist-info'...
Listing './lib/python3.5/site-packages/aiohttp_cors'...
Listing './lib/python3.5/site-packages/aiohttp_cors-0.5.3.dist-info'...
Listing './lib/python3.5/site-packages/aiohttp_debugtoolbar'...
Listing './lib/python3.5/site-packages/aiohttp_debugtoolbar/panels'...
Listing './lib/python3.5/site-packages/aiohttp_debugtoolbar/panels/templates'...
Listing './lib/python3.5/site-packages/aiohttp_debugtoolbar/static'...
Listing './lib/python3.5/site-packages/aiohttp_debugtoolbar/static/css'...
Listing './lib/python3.5/site-packages/aiohttp_debugtoolbar/static/font'...
Listing './lib/python3.5/site-packages/aiohttp_debugtoolbar/static/fonts'...
Listing './lib/python3.5/site-packages/aiohttp_debugtoolbar/static/img'...
Listing './lib/python3.5/site-packages/aiohttp_debugtoolbar/static/js'...
Listing './lib/python3.5/site-packages/aiohttp_debugtoolbar/tbtools'...
Listing './lib/python3.5/site-packages/aiohttp_debugtoolbar/templates'...
Listing './lib/python3.5/site-packages/aiohttp_debugtoolbar-0.4.1.dist-info'...
Listing './lib/python3.5/site-packages/aiohttp_jinja2'...
Listing './lib/python3.5/site-packages/aiohttp_jinja2-0.14.0.dist-info'...
Listing './lib/python3.5/site-packages/aiohttp_session'...
Listing './lib/python3.5/site-packages/aiohttp_session-2.1.0.dist-info'...
Listing './lib/python3.5/site-packages/aiotinydb'...
Listing './lib/python3.5/site-packages/aiotinydb-1.0.1.dist-info'...
Listing './lib/python3.5/site-packages/asn1crypto'...
Listing './lib/python3.5/site-packages/asn1crypto/_perf'...
Listing './lib/python3.5/site-packages/asn1crypto-0.24.0.dist-info'...
Listing './lib/python3.5/site-packages/async_timeout'...
Listing './lib/python3.5/site-packages/async_timeout-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/cchardet'...
Listing './lib/python3.5/site-packages/cchardet-2.1.1.dist-info'...
Listing './lib/python3.5/site-packages/cffi'...
Listing './lib/python3.5/site-packages/cffi-1.11.3.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/cryptography'...
Listing './lib/python3.5/site-packages/cryptography/hazmat'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/asymmetric'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/ciphers'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/kdf'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/twofactor'...
Listing './lib/python3.5/site-packages/cryptography/x509'...
Listing './lib/python3.5/site-packages/cryptography-2.1.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/multidict'...
Listing './lib/python3.5/site-packages/multidict-3.3.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pycares'...
Listing './lib/python3.5/site-packages/pycares-2.3.0.dist-info'...
Listing './lib/python3.5/site-packages/pycparser'...
Listing './lib/python3.5/site-packages/pycparser/ply'...
Listing './lib/python3.5/site-packages/pycparser-2.18.egg-info'...
Listing './lib/python3.5/site-packages/reliz'...
Listing './lib/python3.5/site-packages/reliz/templates'...
Listing './lib/python3.5/site-packages/reliz-0.1.0.dev0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tinydb'...
Listing './lib/python3.5/site-packages/tinydb-3.7.0.egg-info'...
Listing './lib/python3.5/site-packages/typing-3.6.2.dist-info'...
Listing './lib/python3.5/site-packages/uvloop'...
Listing './lib/python3.5/site-packages/uvloop/handles'...
Listing './lib/python3.5/site-packages/uvloop/includes'...
Listing './lib/python3.5/site-packages/uvloop-0.9.1.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './lib/python3.5/site-packages/yarl'...
Listing './lib/python3.5/site-packages/yarl-0.18.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
